--- a/Javascript/DataStructures/03_Stacks/02_Using_Stack_Class/03_Recursion/index.html
+++ b/Javascript/DataStructures/03_Stacks/02_Using_Stack_Class/03_Recursion/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css">
 
-    <title>Data Structure List</title>
+    <title>Data Structure stack</title>
   </head>
   <body>
     <div class="container">
