--- a/Javascript/DataStructures/09_Binary_Trees/02_BST_Searches/index.html
+++ b/Javascript/DataStructures/09_Binary_Trees/02_BST_Searches/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css">
 
-    <title>Data Structure Sets</title>
+    <title>Data Structure Binary Trees</title>
   </head>
   <body>
     <div class="container">
