--- a/Javascript/DataStructures/10_Graphs/02_Searching_Graph/02_BREADTH-FIRST_SEARCH/index.html
+++ b/Javascript/DataStructures/10_Graphs/02_Searching_Graph/02_BREADTH-FIRST_SEARCH/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css">
 
-    <title>Data Structure Binary Trees</title>
+    <title>Data Structure Graphs</title>
   </head>
   <body>
     <div class="container">
@@ -29,6 +29,6 @@
           $(".result").append(" "+data);
       }
     </script>
-    <script src="binary.js"></script>
+    <script src="graph.js"></script>
   </body>
 </html>
