JS | Algorithms Advanced Sorting

--- a/Javascript/Algorithms/01_Sorting/05_MERGESORT/index.html
+++ b/Javascript/Algorithms/01_Sorting/05_MERGESORT/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css">
 
-    <title>INSERTION Sorting Algorithms</title>
+    <title>MergeSort Algorithm</title>
   </head>
   <body>
     <div class="container">
