JS - Challenge | Avaamo Completed

--- a/Javascript/Challenges/Avaamo/index.html
+++ b/Javascript/Challenges/Avaamo/index.html
@@ -8,6 +8,7 @@
   <body>
     <input type="file" onchange='readFile(this)' />
 	   <div id="main"></div>
+     <p id="console"></p>
     <script src="source.js"></script>
     <script>
     </script>
